--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,11 +27,11 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:visibility="invisible"
                     android:layout_width="wrap_content"
                     android:layout_height="150dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/xd_header"
+                    android:visibility="invisible"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,9 +55,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/header"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="23dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
                 app:cardCornerRadius="20dp"
 
                 >
@@ -72,12 +72,12 @@
 
 
             <RelativeLayout
-                android:layout_marginTop="20dp"
                 android:id="@+id/b1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/containerSpinner"
-                android:layout_marginStart="20dp">
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp">
 
                 <TextView
                     android:id="@+id/a1"
@@ -98,18 +98,18 @@
                     android:textColor="@color/secondaryText"
                     android:textSize="13dp" />
 
-                <TextView
+                <Button
                     android:id="@+id/a3"
-                    android:layout_below="@id/a2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
+                    android:layout_below="@id/a2"
                     android:layout_marginEnd="20dp"
-                    android:layout_toRightOf="@id/a1"
+                    android:layout_alignParentEnd="true"
+                    android:backgroundTint="@color/colorGreen"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="Lihat Statistik Lengkap"
+                    android:text="Visualisasi Data"
                     android:textAlignment="textEnd"
-                    android:textColor="@color/colorBlueWaves"
+                    android:textColor="@color/colorWhite"
                     android:textSize="14dp" />
             </RelativeLayout>
 
@@ -124,10 +124,11 @@
                 app:cardCornerRadius="20dp">
 
                 <LinearLayout
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -163,6 +164,7 @@
                                 android:text="Terinfeksi"
                                 android:textColor="@color/secondaryText"
                                 android:textSize="12dp" />
+
                             <TextView
                                 android:id="@+id/infected_new"
                                 android:layout_width="wrap_content"
@@ -204,6 +206,7 @@
                                 android:text="Meninggal"
                                 android:textColor="@color/secondaryText"
                                 android:textSize="12dp" />
+
                             <TextView
                                 android:id="@+id/death_new"
                                 android:layout_width="wrap_content"
@@ -243,6 +246,7 @@
                                 android:text="Sembuh"
                                 android:textColor="@color/secondaryText"
                                 android:textSize="12dp" />
+
                             <TextView
                                 android:id="@+id/recovered_new"
                                 android:layout_width="wrap_content"
@@ -255,34 +259,36 @@
                     </LinearLayout>
 
                     <TextView
-                        android:layout_marginStart="10dp"
                         android:id="@+id/in_hospital"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/sf_pro_display"
                         android:text="Dirawat : "
-                        android:textColor="@color/colorNeoBlue"
+                        android:textColor="@color/colorBlack"
                         android:textSize="12dp" />
+
                     <TextView
-                        android:layout_marginStart="10dp"
                         android:id="@+id/negative"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/sf_pro_display"
                         android:text="Spesimen Negatif : 0"
-                        android:textColor="@color/colorGreen"
+                        android:textColor="@color/colorBlack"
                         android:textSize="12dp" />
+
                     <TextView
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginStart="10dp"
                         android:id="@+id/odp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="10dp"
                         android:fontFamily="@font/sf_pro_display"
                         android:text="Total ODP ( Indonesia ) : 0"
-                        android:textColor="@color/bootstrapRed"
+                        android:textColor="@color/colorBlack"
                         android:textSize="12dp" />
-                    <!--                    IF YOU WANT TO ADD ADDITIONAL INFORMATION-->
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -292,12 +298,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/containerCase"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
+
                 <TextView
-                    android:layout_marginStart="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/sf_pro_display"
                     android:text="Langkah Pencegahan"
                     android:textColor="@color/colorBlack"
@@ -387,95 +393,125 @@
             </LinearLayout>
 
 
-
             <RelativeLayout
                 android:id="@+id/btnOpenAI"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="13dp"
-                >
+                android:layout_margin="13dp">
+
                 <ImageView
-                    android:scaleType="fitXY"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:scaleType="fitXY"
                     android:src="@drawable/xd_prixa" />
 
                 <TextView
                     android:id="@+id/txt1"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
-                    android:width="200dp"
-                    android:layout_alignParentEnd="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Periksa Sekarang"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:width="200dp"
                     android:fontFamily="@font/poppins_medium"
-                    android:textSize="17dp"
-                    android:textColor="@color/colorWhite"/>
+                    android:text="Periksa Sekarang"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="17dp"/>
+                <TextView
+                    android:layout_below="@id/txt2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Klik Disini"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="17dp"/>
+
                 <TextView
                     android:id="@+id/txt2"
-                    android:layout_below="@id/txt1"
-                    android:width="200dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12dp"
+                    android:layout_below="@id/txt1"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="20dp"
+                    android:width="200dp"
                     android:fontFamily="@font/poppins_regular"
                     android:text="@string/prixa"
-                    android:textColor="@color/colorWhite"/>
+                    android:textColor="@color/colorWhite"
+                    android:textSize="12dp" />
             </RelativeLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_margin="20dp"
-                android:layout_below="@id/containerPrevention"
+                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
-                >
-                <RelativeLayout
-                    android:padding="10dp"
+                android:layout_below="@id/containerPrevention"
+                app:cardCornerRadius="20dp">
+
+                <LinearLayout
+                    android:layout_margin="20dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
                     <TextView
                         android:id="@+id/h1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat_regular"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Darurat Covid-19 ???"
                         android:textColor="@color/xdRed"
                         android:textSize="20dp" />
-                    <LinearLayout
-                        android:layout_below="@id/h1"
+
+
+                    <Button
+                        android:id="@+id/btnCall"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
-                        <Button
-                            android:layout_weight="1"
-                            android:id="@+id/btnCall"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Telepon"
-                            android:drawableLeft="@drawable/ic_baseline_call_24"
-                            android:backgroundTint="@color/xdRed"
-                            android:layout_marginRight="10dp"/>
-                        <Button
-                            android:id="@+id/btnHospital"
-                            android:drawableLeft="@drawable/ic_baseline_local_hospital_24"
-                            android:layout_weight="1"
-                            android:text="LIST RS"
-                            android:backgroundTint="@color/colorNeoBlue"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                        android:layout_marginRight="10dp"
+                        android:backgroundTint="@color/xdRed"
+                        android:drawableLeft="@drawable/ic_baseline_call_24"
+                        android:text="Telepon" />
+                </LinearLayout>
 
-                </RelativeLayout>
+
 
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
     </ScrollView>
 
-    <include layout="@layout/statistics"/>
-    <include layout="@layout/layout_ai"/>
+    <include layout="@layout/info" />
 
-</RelativeLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btnOpenInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:elevation="0dp"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_info"
+            app:fabSize="mini" />
+    </androidx.cardview.widget.CardView>
+
+    <include layout="@layout/statistics" />
+
+    <include layout="@layout/layout_ai" />
+
+
+    <include layout="@layout/layout_loading_transparent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
